opam-version: "2.0"
name:         "mirage-entropy"
homepage:     "https://github.com/mirage/mirage-entropy"
dev-repo:     "git+https://github.com/mirage/mirage-entropy.git"
bug-reports:  "https://github.com/mirage/mirage-entropy/issues"
doc:          "https://mirage.github.io/mirage-entropy/"
author:       ["Hannes Mehnert" "David Kaloper" "Anil Madhavapeddy" "Dave Scott"]
maintainer:   "david@numm.org"
license:      "BSD2"

build: [
 [ "dune" "subst" ] {pinned}
 [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "dune"
  "ocaml" {>= "4.04.2"}
  "mirage-runtime"
  "cstruct"
  "lwt"
]
conflicts: [
  "cstruct" {<"1.4.0"}
]
tags: [ "org:mirage"]
available: [
  arch = "arm" | arch = "x86_32" | arch = "x86_64" | arch = "arm64"
]
synopsis: "Entropy source virtual interface for MirageOS unikernels"
description: """
mirage-entropy implements various entropy sources for MirageOS unikernels:
- timer based ones (see [whirlwind RNG paper](https://www.ieee-security.org/TC/SP2014/papers/Not-So-RandomNumbersinVirtualizedLinuxandtheWhirlwindRNG.pdf))
- rdseed and rdrand (x86/x86-64 only)
"""
